# analytics-api

./: .env.compose  Dockerfile  README.md  Untitled  compose.yaml  pyproject.toml  requirements.txt
nbs/: 2- list-data-types.ipynb  3-send-data-to-the-api.ipynb  hello-world.ipynb  verify-api-event-route.ipynb
src/: main.py
src/api/db/: config.py
src/api/events/: __init__.py  routing.py  schema.py
