[project]
name = "analytics-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.3",
    "gunicorn>=25.3.0",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.49",
    "sqlmodel>=0.0.38",
    "timescaledb>=0.0.4",
    "uvicorn>=0.43.0",
]
